# fednarrativealpha

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: cv_bullets.md  edgestream_positioning.md  minimum_viable_version.md
reports/: final_output_audit.md  final_research_report.md  model_card.md
results/: backtest_summary.json  baseline_metrics.json  feature_importance.csv  model_metrics.json  selected_features.csv
src/backtest/: backtest_engine.py  portfolio_optimizer.py  signal_to_portfolio.py  transaction_costs.py
src/data/: build_master_dataset.py  download_fred.py  download_prices.py  scrape_fed_text.py
src/features/: information_filter.py  price_features.py  text_features.py
src/hypotheses/hypothesis_cards/: H001_macro_narrative_alpha.yaml
src/models/: train_baselines.py  train_ml_models.py  walk_forward_validation.py
src/reporting/: make_research_report.py  verify_final_outputs.py
tests/: test_backtest_accounting.py  test_feature_dates.py  test_no_lookahead.py  test_portfolio_constraints.py
